--- a/fmf-comfyUI-biz/pom.xml
+++ b/fmf-comfyUI-biz/pom.xml
@@ -80,5 +80,10 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.7</version>
+        </dependency>
     </dependencies>
 </project>
