--- a/fmf-comfyUI-web/pom.xml
+++ b/fmf-comfyUI-web/pom.xml
@@ -45,6 +45,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.5.7</version>
+        </dependency>
     </dependencies>
 
     <build>
