--- a/fmf-comfyUI-biz/pom.xml
+++ b/fmf-comfyUI-biz/pom.xml
@@ -85,5 +85,10 @@
             <artifactId>minio</artifactId>
             <version>8.5.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.7</version>
+        </dependency>
     </dependencies>
 </project>
