--- a/fmf-comfyUI-dal/pom.xml
+++ b/fmf-comfyUI-dal/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.13</version>
         </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
 
 </project>
